SP Screen Production/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Sarah Test</fullName>
        <description>This is a test to see what this is for</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed - Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Action_Required__c</fullName>
        <label>Action Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep Follow Up</fullName>
                </value>
                <value>
                    <fullName>Book Install</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Rework Inhouse</fullName>
                </value>
                <value>
                    <fullName>Service call</fullName>
                </value>
                <value>
                    <fullName>Supplier Follow Up</fullName>
                </value>
                <value>
                    <fullName>Rework Supplier</fullName>
                </value>
                <value>
                    <fullName>Book Check Measure</fullName>
                </value>
                <value>
                    <fullName>Escalate to Manager</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMRoutable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether a case should be routed to an agent via NVM</description>
        <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
        <label>NVMRoutable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rework_Action_Plan_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rework Action Plan Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_of_Cost_of_Rework__c</fullName>
        <label>$ Value of Cost of Rework</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order required</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.STATUS</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Value_of_Cost_of_Rework__c</columns>
        <columns>Work_Order__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Products__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Action_Required__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>rockford_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CLOSED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>RF</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>RFSCREENS</value>
        </filters>
        <label>rockford cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>